--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 END_POINT=https://chatapp-server-jarx.onrender.com
+AWS_ACCESS_KEY_ID=AKIA2UC26SKLUQPSKID6
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET=akil-file-upload
