--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1621.0",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.20",
     "react": "^18.2.0",
